# net-core-injector

./: .gitattributes  .gitignore  README.md  _build.bat  _build.sh  _run.bat  _run.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
Bootstrapper/: .gitignore  CMakeLists.txt  build.bat  build.sh  clean.bat
Bootstrapper/include/: README.md
Bootstrapper/src/: bootstrapper.cpp  exit_hooks.cpp  exit_hooks.h  library.cpp  logging.cpp  logging.h  module_dir.cpp  module_dir.h  process_args.cpp  process_args.h  version_proxy.cpp  version_proxy.def
DemoApplication/: DemoApplication.sln  DemoApplication.slnx  build.bat  build.sh  clean.bat
DemoApplication/DemoApplication/: Program.cs
RuntimePatcher/: .gitignore  RuntimePatcher.sln  RuntimePatcher.slnx  build.bat  build.sh  clean.bat
RuntimePatcher/RuntimePatcher/: Lib.cs  RuntimePatcher.csproj
src/: agent.ts  main.ts
